chore: default publish checkbox to true in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ on:
         description: "Publish to npm after release"
         required: false
         type: boolean
-        default: false
+        default: true
 
 jobs:
   release:
