--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24
           registry-url: https://registry.npmjs.org
 
       - run: npm ci
@@ -70,4 +70,4 @@ jobs:
 
       - name: Publish to npm
         if: inputs.publish
-        run: npm publish --provenance --access public
+        run: npm publish --access public
